fix: order and vertical alignment of columns (#69)

--- a/src/index.scss
+++ b/src/index.scss
@@ -47,7 +47,6 @@ $fa-font-path: "~font-awesome/fonts";
 
 
   .profile-avatar-wrap {
-    margin-right: 1rem;
 
     @include media-breakpoint-up(md) {
       max-width: 12rem;
